--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   flutter_bloc: ^6.1.1
-  equatable: ^1.2.5  
+  equatable: ^1.2.5
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
